--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.0",
     "wrangler": "^0.0.0-b24c2b2d"
   },
   "private": true,
@@ -12,6 +12,7 @@
     "deploy": "wrangler publish"
   },
   "dependencies": {
+    "document-ir": "github:cendyne/document-ir",
     "hono": "^2.5.6"
   }
 }
