--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20221111.1",
     "typescript": "^5.0.0",
-    "wrangler": "^0.0.0-b24c2b2d"
+    "wrangler": "^3.5.1"
   },
   "private": true,
   "scripts": {
