--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,7 @@ bucket = "./assets"
 
 [[ d1_databases ]]
 binding = "DB"
-database_name = "social_archive"
-database_id = "f4a7564d-cc96-4a22-b90a-5e72b6fa8964"
-preview_database_id = "f4a7564d-cc96-4a22-b90a-5e72b6fa8964"
+database_name = "social_archive2"
+database_id = "199e8c2f-5e1c-4ea0-983a-c33dd40f2687"
+preview_database_id = "199e8c2f-5e1c-4ea0-983a-c33dd40f2687"
+#
